@@ -1,34 +1,28 @@
-   package com.damas.config;
+package com.damas.config;
 
-   import org.springframework.beans.factory.annotation.Value;
-   import org.springframework.context.annotation.Bean;
-   import org.springframework.context.annotation.Configuration;
-   import org.springframework.web.cors.CorsConfiguration;
-   import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-   import org.springframework.web.filter.CorsFilter;
-   import java.util.Arrays;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-   @Configuration
-   public class CorsConfig {
+import java.util.Arrays;
+import java.util.List;
 
-       @Value("${cors.allowedOrigins}")
-       private String allowedOrigins;
+@Configuration
+public class CorsConfig {
 
-       @Bean
-       public CorsFilter corsFilter() {
-           CorsConfiguration corsConfiguration = new CorsConfiguration();
-           corsConfiguration.setAllowCredentials(true);
-           corsConfiguration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-           corsConfiguration.setAllowedHeaders(Arrays.asList("Origin", "Access-Control-Allow-Origin", "Content-Type",
-                   "Accept", "Authorization", "Origin, Accept", "X-Requested-With",
-                   "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-           corsConfiguration.setExposedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization",
-                   "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
-           corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-           
-           UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
-           urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
-           
-           return new CorsFilter(urlBasedCorsConfigurationSource);
-       }
-   }
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("https://jogo-dama.netlify.app", "http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
+        
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
+}
